Add AI provider abstraction layer