@@ -2,11 +2,21 @@ package com.tutict.finalassignmentbackend.ai.chat;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.tutict.finalassignmentbackend.ai.provider.AiChatPrompt;
+import com.tutict.finalassignmentbackend.ai.provider.AiGenerationOptions;
+import com.tutict.finalassignmentbackend.ai.provider.AiMessage;
+import com.tutict.finalassignmentbackend.ai.provider.AiProvider;
+import com.tutict.finalassignmentbackend.ai.provider.AiProviderProperties;
+import com.tutict.finalassignmentbackend.ai.provider.AiProviderRegistry;
+import com.tutict.finalassignmentbackend.ai.provider.AiToken;
+import com.tutict.finalassignmentbackend.ai.provider.NoopAiProvider;
+import com.tutict.finalassignmentbackend.ai.provider.ProviderHealth;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.codec.ServerSentEvent;
 import org.springframework.web.server.ResponseStatusException;
 import reactor.core.Disposable;
 import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import java.time.Duration;
 import java.util.List;
@@ -24,11 +34,11 @@ class AiChatControllerStreamingTest {
 
     @Test
     void streamsTypedSseTokenTokenDone() {
-        AiStreamProvider provider = (request, sessionKey, messageId) -> Flux.just(
-                ChatStreamEvent.token(sessionKey, messageId, "你好"),
-                ChatStreamEvent.token(sessionKey, messageId, "Mock"),
-                ChatStreamEvent.done(sessionKey, messageId)
-        );
+        AiProvider provider = provider("primary", Flux.just(
+                new AiToken("你好", false, Map.of()),
+                new AiToken("Mock", false, Map.of()),
+                new AiToken("", true, Map.of())
+        ));
         AiChatController controller = controller(provider, Duration.ofSeconds(5), Duration.ofSeconds(15), true);
 
         List<ServerSentEvent<String>> events = controller.stream(
@@ -45,8 +55,12 @@ class AiChatControllerStreamingTest {
 
     @Test
     void rejectsWhenStreamingFeatureFlagIsDisabled() {
-        AiStreamProvider provider = (request, sessionKey, messageId) -> Flux.empty();
-        AiChatController controller = controller(provider, Duration.ofSeconds(5), Duration.ofSeconds(15), false);
+        AiChatController controller = controller(
+                provider("primary", Flux.empty()),
+                Duration.ofSeconds(5),
+                Duration.ofSeconds(15),
+                false
+        );
 
         assertThatThrownBy(() -> controller.stream(new AiChatStreamRequest("hello", null, Map.of())))
                 .isInstanceOf(ResponseStatusException.class)
@@ -55,10 +69,9 @@ class AiChatControllerStreamingTest {
 
     @Test
     void emitsKeepaliveWhenProviderIsIdle() {
-        AiStreamProvider provider = (request, sessionKey, messageId) -> Flux.never();
-        ChatStreamService service = new ChatStreamService(
-                provider,
-                Duration.ofSeconds(60),
+        ChatStreamService service = service(
+                provider("primary", Flux.never()),
+                Duration.ofSeconds(5),
                 Duration.ofMillis(10)
         );
 
@@ -70,54 +83,113 @@ class AiChatControllerStreamingTest {
     }
 
     @Test
-    void emitsErrorAndCompletesOnTimeout() {
-        AiStreamProvider provider = (request, sessionKey, messageId) -> Flux.never();
-        ChatStreamService service = new ChatStreamService(
-                provider,
+    void fallsBackOnProviderTimeout() {
+        AiProvider primary = provider("primary", Flux.never());
+        AiProvider fallback = provider("fallback", Flux.just(
+                new AiToken("fallback", false, Map.of()),
+                new AiToken("", true, Map.of())
+        ));
+        ChatStreamService service = service(
+                List.of(primary, fallback),
+                "primary",
+                "fallback",
                 Duration.ofMillis(10),
                 Duration.ofSeconds(60)
         );
 
         List<ChatStreamEvent> events = service.stream(new AiChatStreamRequest("hello", "session-1", Map.of()))
                 .collectList()
-                .block(Duration.ofMillis(200));
+                .block(Duration.ofMillis(500));
 
-        assertThat(events).hasSize(1);
-        assertThat(events.getFirst().type()).isEqualTo(ChatStreamEventType.ERROR.wireName());
-        assertThat(events.getFirst().payload().toString()).contains("AI stream timed out");
+        assertThat(events).hasSize(2);
+        assertThat(events.get(0).type()).isEqualTo(ChatStreamEventType.TOKEN.wireName());
+        assertThat(events.get(0).token()).isEqualTo("fallback");
+        assertThat(events.get(0).payload().toString()).contains("provider=fallback");
+        assertThat(events.get(1).type()).isEqualTo(ChatStreamEventType.DONE.wireName());
     }
 
     @Test
     void cancellationPropagatesToProvider() throws InterruptedException {
         AtomicBoolean canceled = new AtomicBoolean(false);
         CountDownLatch firstEvent = new CountDownLatch(1);
-        AiStreamProvider provider = (request, sessionKey, messageId) -> Flux.interval(Duration.ofSeconds(1))
-                .map(index -> ChatStreamEvent.token(sessionKey, messageId, "token-" + index))
-                .doOnCancel(() -> canceled.set(true));
-        ChatStreamService service = new ChatStreamService(
-                provider,
-                Duration.ofSeconds(60),
-                Duration.ofSeconds(15)
+        AiProvider primary = provider(
+                "primary",
+                Flux.interval(Duration.ofMillis(10))
+                        .map(index -> new AiToken("token-" + index, false, Map.of()))
+                        .doOnCancel(() -> canceled.set(true))
         );
+        ChatStreamService service = service(primary, Duration.ofSeconds(5), Duration.ofSeconds(15));
 
         Disposable subscription = service.stream(new AiChatStreamRequest("hello", "session-1", Map.of()))
                 .subscribe(event -> firstEvent.countDown());
-        assertThat(firstEvent.await(1500, TimeUnit.MILLISECONDS)).isTrue();
+        assertThat(firstEvent.await(500, TimeUnit.MILLISECONDS)).isTrue();
         subscription.dispose();
 
         assertThat(canceled).isTrue();
     }
 
     private AiChatController controller(
-            AiStreamProvider provider,
-            Duration timeout,
+            AiProvider provider,
+            Duration streamingTimeout,
             Duration keepAlive,
             boolean enabled
     ) {
-        ChatStreamService streamService = new ChatStreamService(provider, timeout, keepAlive);
+        ChatStreamService streamService = service(provider, streamingTimeout, keepAlive);
         AiChatService chatService = new AiChatService(streamService);
         StreamEventWriter writer = new StreamEventWriter(objectMapper);
         return new AiChatController(chatService, writer, enabled);
+    }
+
+    private ChatStreamService service(AiProvider provider, Duration streamingTimeout, Duration keepAlive) {
+        return service(List.of(provider), provider.providerName(), "noop", streamingTimeout, keepAlive);
+    }
+
+    private ChatStreamService service(
+            List<AiProvider> providers,
+            String primary,
+            String fallback,
+            Duration streamingTimeout,
+            Duration keepAlive
+    ) {
+        AiProviderProperties properties = new AiProviderProperties();
+        properties.getProvider().setPrimary(primary);
+        properties.getProvider().setFallback(fallback);
+        properties.getProvider().setStreamingTimeout(streamingTimeout);
+        properties.getProvider().setRetryAttempts(0);
+        AiProviderRegistry registry = new AiProviderRegistry(
+                Flux.concat(Flux.fromIterable(providers), Flux.just(new NoopAiProvider())).collectList().block(),
+                properties
+        );
+        return new ChatStreamService(registry, keepAlive);
+    }
+
+    private AiProvider provider(String name, Flux<AiToken> stream) {
+        return new AiProvider() {
+            @Override
+            public String providerName() {
+                return name;
+            }
+
+            @Override
+            public boolean supportsStreaming() {
+                return true;
+            }
+
+            @Override
+            public Flux<AiToken> stream(AiChatPrompt prompt, AiGenerationOptions options) {
+                return stream;
+            }
+
+            @Override
+            public Mono<AiMessage> complete(AiChatPrompt prompt, AiGenerationOptions options) {
+                return Mono.just(new AiMessage("", Map.of()));
+            }
+
+            @Override
+            public Mono<ProviderHealth> health() {
+                return Mono.just(ProviderHealth.up(name));
+            }
+        };
     }
 
     private void assertSse(ServerSentEvent<String> sse, String eventName, String token) {
